apollo-router/src/plugins/rhai/snapshots/apollo_router__plugins__rhai__tests__subgraph_error_logging_without_body@logs.snap
---
source: apollo-router/src/plugins/rhai/tests.rs
expression: yaml
---
- fields: {}
  level: ERROR
  message: "map_request callback failed: ErrorDetails {\n    status: 500,\n    message: Some(\n        \"An error occurred without a body\",\n    ),\n    position: Some(\n        Position {\n            line: Some(\n                22,\n            ),\n            pos: Some(\n                5,\n            ),\n        },\n    ),\n    body: None,\n    internal_detail: Some(\n        \"rhai execution error: 'Runtime error: An error occurred without a body (line 22, position 5)'\",\n    ),\n}"
  span:
    name: rhai_plugin
    otel.kind: INTERNAL
    rhai service: "subgraph :: Request"
  spans:
    - name: rhai_plugin
      otel.kind: INTERNAL
      rhai service: "subgraph :: Request"
- fields:
    rhai.stage: SubgraphResponse
  level: ERROR
  message: "map_response callback failed: ErrorDetails {\n    status: 500,\n    message: Some(\n        \"An error occurred without a body\",\n    ),\n    position: Some(\n        Position {\n            line: Some(\n                26,\n            ),\n            pos: Some(\n                5,\n            ),\n        },\n    ),\n    body: None,\n    internal_detail: Some(\n        \"rhai execution error: 'Runtime error: An error occurred without a body (line 26, position 5)'\",\n    ),\n}"
